# QuickView

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  README_zh-CN.md  RELEASE_NOTES.md  full_diff.patch  main_diff.patch  vcpkg.json
.github/workflows/: build-release.yml  close-on-release.yml  publish_version.yml  winget.yml
QuickView/: AppContext.cpp  AppContext.h  AppStrings.cpp  AppStrings.h  ArchiveVFS.cpp  ArchiveVFS.h  AvifAnimator.cpp  ColorMath.cpp  ColorMath.h  CompareController.cpp  CompareController.h  CompositionEngine.cpp  CompositionEngine.h  ComputeEngine.cpp  ComputeEngine.h  ContextMenu.cpp  ContextMenu.h  DialogController.cpp  DialogController.h  DisplayColorInfo.cpp  DisplayColorInfo.h  EditState.h  FileNavigator.cpp  FileNavigator.h  GalleryOverlay.cpp  GalleryOverlay.h  GeekContextMenu.cpp  GeekContextMenu.h  GeekGlass.cpp  GeekIconData.cpp  GeekIconLibrary.h  GeekIconRenderer.cpp  GeekIconRenderer.h  HeavyLanePool.cpp  HeavyLanePool.h  HelpOverlay.cpp  HelpOverlay.h  IController.h  ImageEngine.cpp  ImageEngine.h  (+45 more)
cmake/: AdaptiveToolchain.cmake  MSVCEnv.cmake  QuickViewToolchain.cmake  lld-link-wrapper.bat
custom-ports/highway/: portfile.cmake
custom-ports/libavif/: portfile.cmake
custom-ports/libjxl/: portfile.cmake
custom-ports/libwebp/: portfile.cmake
custom-ports/libyuv/: clang-cl-neon.diff  cmake.diff  portfile.cmake
custom-ports/vcpkg-tool-meson/: adjust-args.patch  fix-arm64-machine.patch  meson.template.in  portfile.cmake
custom-ports/zlib/: fix-clang-cl-neon.patch  portfile.cmake  vcpkg.json
custom-triplet/: arm64-windows-static-clang.cmake  x64-windows-static-clang-asan.cmake  x64-windows-static-clang.cmake
installer/: QuickView.iss
tests/: ColorMathTests.cpp  FileNavigatorTests.cpp  HotkeyTests.cpp  SupportedExtensionsTests.cpp
tools/: convert_app_strings.py
tools/VectorIconExtractor/: README.md  VectorIconExtractor.cpp
